--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">LoRa_Multihop_Visualisation</string>
     <string name="google_maps_key">AIzaSyDZ4lhkCpBFjpG5fJj3IT66pfJPJH6ZetQ</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="title_select_bluetooth_device">Bluetooth Devices</string>
 </resources>
