--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="title_activity_settings">Settings</string>
     <string name="title_select_bluetooth_device">Bluetooth Devices</string>
     <string name="title_activity_terminal">Terminal</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
